# drone-ikarus-project

./: CMakeLists.txt  Ikarus project  Ikarus project.pro  Makefile  main.cpp  moc_AlanMainWindow.cpp  moc_AlanMultipleChoiceDialog.cpp  moc_AlanPanel.cpp  moc_AlanResolutionDialog.cpp  moc_AlanSingleOptionDialog.cpp  moc_AlanTwoButtonDialog.cpp  moc_LogPanel.cpp  moc_StreamPanel.cpp  moc_predefs.h
Consumer/: InformationObjectConsumer.cpp  InformationObjectConsumer.h
Consumer/DataConsumer/: DataConsumer.cpp  DataConsumer.h
Consumer/LogConsumer/: LogConsumer.cpp  LogConsumer.h
Consumer/OptionConsumer/: OptionConsumer.cpp  OptionConsumer.h
Factory/: AbstractFactory.cpp  AbstractFactory.h
Factory/AlanDefaultFactory/: AlanDefaultFactory.cpp  AlanDefaultFactory.h
InformationExporter/: InformationExporter.cpp  InformationExporter.h
InformationExporter/ChildClasses/: DataExporter.cpp  DataExporter.h  LogExporter.cpp  LogExporter.h
InformationObject/: InformationObject.cpp  InformationObject.h
InformationObject/Data/: Data.cpp  Data.h
InformationObject/Log/: Log.cpp  Log.h
InformationObject/Option/: Option.cpp  Option.h
InformationObject/Option/ChildOptions/: ClientStatusOption.h  LatencyOption.h  LocationOption.h  ResolutionOption.h  WindowHandleOption.h
Interfaces/: DataSupplierFactory.h  InformationSupplierFactory.h  LogSupplierFactory.h  OptionSupplierFactory.h  StateRestorable.h
MainWindow/: AlanMainWindow.cpp  AlanMainWindow.h
MainWindow/Consumer/: InformationObjectConsumer.cpp  InformationObjectConsumer.h
MainWindow/Consumer/LogConsumer/: LogConsumer.h
MainWindow/Dialogs/: AlanSingleOptionDialog.cpp  AlanSingleOptionDialog.h
MainWindow/Dialogs/AlanTwoButtonDialog/: AlanTwoButtonDialog.cpp  AlanTwoButtonDialog.h  AlanTwoButtonDialogText.cpp
MainWindow/Dialogs/AlanTwoButtonDialog/AlanMultipleChoiceDialog/: AlanMultipleChoiceDialog.cpp  AlanMultipleChoiceDialog.h
MainWindow/Dialogs/AlanTwoButtonDialog/AlanMultipleChoiceDialog/ChildDialogs/: SetDroneAddrDialog.h  SetServersAddrDialog.h
MainWindow/Dialogs/AlanTwoButtonDialog/AlanSingleLineConfiguration/: AlanMultipleChoiceDialog.cpp  AlanMultipleChoiceDialog.h
MainWindow/Dialogs/AlanTwoButtonDialog/AlanSingleLineConfiguration/ChildDialogs/: setDroneAddrDialog.h  setDroneDialog.h  setServersAddrDialog.h
MainWindow/Dialogs/AlanTwoButtonDialog/ChildDialogs/: AlanResolutionDialog.h  SetLatencyDialog.h  SetResolutionDialog.h
MainWindow/Dialogs/ChildDialogs/: AlanAboutDialog.h
MainWindow/Factory/: AbstractGuiFactory.cpp  AbstractGuiFactory.h
MainWindow/Factory/AlanDefaultGuiFactory/: AlanDefaultGuiFactory.cpp  AlanDefaultGuiFactory.h
MainWindow/InformationObject/: InformationObject.cpp  InformationObject.h
MainWindow/InformationObject/Log/: Log.cpp  Log.h
MainWindow/Interfaces/: InformationSupplierFactory.h  LogSupplierFactory.h  StateRestorable.h
MainWindow/Panels/: AlanPanel.cpp  AlanPanel.h  LogPanel.cpp  LogPanel.h
MainWindow/Panels/LogWidget/: LogWidget.cpp  LogWidget.h
MainWindow/Panels/StreamPanel/: StreamPanel.cpp  StreamPanel.h
MainWindow/Panels/StreamPanel/DataPanel/: DataPanel.cpp  DataPanel.h
MainWindow/Panels/StreamPanel/DataPanel/DataWidget/: DataWidget.cpp  DataWidget.h
MainWindow/Panels/StreamPanel/LogPanel/: LogPanel.cpp  LogPanel.h
MainWindow/Panels/StreamPanel/LogPanel/LogWidget/: LogWidget.cpp  LogWidget.h
MainWindow/State/: State.cpp  State.h
MainWindow/State/WindowStates/: AlanDataFileDialogState.h  AlanDroneAddrDialogState.h  AlanErrorFileDialogState.h  AlanLatencyDialogState.h  AlanMainWindowState.h  AlanRestorationDialogState.h  AlanServerAddrDialogState.h  AlanSingleOptionDialog.h  AlanSingleOptionDialogState.h
MainWindow/State/WindowStates/AlanTwoButtonsDialogState/: AlanTwoButtonsDialogState.h
MainWindow/State/WindowStates/AlanTwoButtonsDialogState/AlanMultipleChoiceDialogState/: AlanMultipleChoiceDialogState.h
MainWindow/Supplier/: AbstractSupplier.cpp  AbstractSupplier.h  InformationObjectSupplier.cpp  InformationObjectSupplier.h
MainWindow/Supplier/LogSupplier/: LogSupplier.cpp  LogSupplier.h
MainWindow/Supplier/StreamSupplier/: StreamSupplier.cpp  StreamSupplier.h
MainWindow/Supplier/StreamSupplier/LogSupplier/: LogSupplier.h
RTSPClientSubsystem/: AbstractRTSPClientSubsystem.cpp  AbstractRTSPClientSubsystem.h
RTSPClientSubsystem/AlanDefaultRTSPClientSubsystem/: AlanDefaultRTSPClientSubsystem.cpp  AlanDefaultRTSPClientSubsystem.h  MainLoopThread.h  common.h  handle.c  handle.h  qsettings.h  utill.c
Supplier/: InformationObjectSupplier.cpp  InformationObjectSupplier.h
Supplier/DataSupplier/: DataSupplier.cpp  DataSupplier.h
Supplier/LogSupplier/: LogSupplier.cpp  LogSupplier.h
Supplier/OptionSupplier/: OptionSupplier.cpp  OptionSupplier.h
misc/: option_types.h  states.h
misc/Suppliers/: InformationObjectSupplier.h  LogSuppliers.h  OptionSuppliers.h
misc/errors/: AlanMainWindowErrors.h
misc/generic_text/: AlanMainWindowDialogs.h  AlanMainWindowMisc.h  generic_dialogs.h
misc/generic_text/Dialogs/AlanTwoButtonDialog/ChildDialogs/: SetLatencyDialogText.h
misc/generic_text/Panels/StreamPanel/: StreamPanelText.h
misc/img/: AlanMainWindowImagePaths.h
res/: misc.h  states.h  version.h
res/Suppliers/: DataSuppliers.h  InformationObjectSupplier.h  LogSuppliers.h  OptionSuppliers.h
res/errors/: AlanMainWindowErrors.h  AlanPanelErrors.h
res/generic_text/: AlanMainWindowText.h  generic_dialogs.h
res/generic_text/Dialogs/: AlanSingleOptionDialogText.h
res/generic_text/Dialogs/AlanTwoButtonDialog/: AlanTwoButtonDialogText.h
res/generic_text/Dialogs/ChildDialogs/: AlanAboutDialogText.h
res/generic_text/Panels/: AlanPanelText.h
res/generic_text/Panels/StreamPanel/: StreamPanelText.h
res/img/: generic_paths.h
server/: main.cpp  server.h
(+18 files in other folders)
